solution custom html5 video player

--- a/11 - Custom Video Player/style.css
+++ b/11 - Custom Video Player/style.css
@@ -54,6 +54,10 @@ body {
   max-width:50px;
 }
 
+.player__button:hover {
+  color: #ffc600;
+}
+
 .player__button:focus {
   border-color: #ffc600;
 }
