--- a/15 - LocalStorage/style.css
+++ b/15 - LocalStorage/style.css
@@ -1,7 +1,7 @@
 
     html {
       box-sizing: border-box;
-      background:url('http://wes.io/hx9M/oh-la-la.jpg') center no-repeat;
+      background:url('http://www.guiagastronomicadeleon.es/wp-content/uploads/2018/11/Bar-Tapas-el-Trastero-Leon-2018-3.jpg') center no-repeat;
       background-size:cover;
       min-height:100vh;
       display:flex;
